fix: some feedback comments

--- a/pages/generative-and-rag/rag-with-generative-search.mdx
+++ b/pages/generative-and-rag/rag-with-generative-search.mdx
@@ -2,9 +2,8 @@ import Collapse from '@/components/Collapse'
 import { Tabs } from "nextra/components"
 
 
-# Simple Rag With Generative Search
-
-Use AI to generate meaningful insights and summaries from your documents using Retrieval-Augmented Generation (RAG). Apply natural language prompts to individual documents or across multiple sources to extract relevant information and create context-aware responses.
+# Rag With Generative Search
+Unbody gives you various ways to perform Rag - from generating insights from single documents to analyzing multiple sources at once. Let's explore from simple to advanced approaches.
 
 ## Generate from single document
 Let's say you have a PDF document and want to create a quick summary of its contents. This example shows how to generate an AI response that references any part of the document.
@@ -86,7 +85,7 @@ Let's say you have a PDF document and want to create a quick summary of its cont
 ```
 </Collapse>
 
-## Generate from single document with options
+## Generate from every single document with options
 Need more control over how the AI processes your documents? You can fine-tune parameters like creativity level and response length to get exactly the kind of output you need.
 
 <Tabs items={['Unbody SDK', 'GraphQL']}>
