--- a/pages/generative-and-rag/multimodal-rag-using-generative-api.mdx
+++ b/pages/generative-and-rag/multimodal-rag-using-generative-api.mdx
@@ -6,7 +6,7 @@ import { Tabs } from "nextra/components"
 
 Generate insights by analyzing text and images together. Multimodal capabilities allow combining different types of data - like diagrams with text descriptions or images with metadata - to create comprehensive understanding.
 
-## Technical Diagram Analysis
+## Using Multimodal RAG to Analyze Technical Architecture Diagrams
 In this example, we combine multiple input types to analyze a system architecture diagram. The system acts as a technical expert, receiving both the image and specific instructions about what aspects to focus on. This is particularly useful for getting detailed insights about complex technical diagrams.
 
 ```typescript
@@ -56,4 +56,90 @@ In this example, we combine multiple input types to analyze a system architectur
 ```
 </Collapse>
 
+## Using Multimodal RAG to Generate Tarantino-Style Dialogue
+//TODO: add explanation text
+
+```typescript
+
+const queries = [
+  unbody.get.textDocument.search
+    .find("Quentin Tarantino")
+    .select("title", "text", "autoSummary"),
+
+  unbody.get.videoFile.search
+    .find("Quentin Tarantino")
+    .select("originalName", "autoSummary"),
+
+  unbody.get.subtitleFile.search
+    .find("Quentin Tarantino")
+    .select(
+      "entries.SubtitleEntry.start",
+      "entries.SubtitleEntry.end",
+      "entries.SubtitleEntry.text"
+    ),
+
+  unbody.get.imageBlock.search
+    .find("Quentin Tarantino")
+    .select("url", "autoCaption"),
+];
+
+// Execute all queries in parallel
+const { data } = await unbody.exec(...queries);
+
+const [textDocs, videos, subtitles, images] = data;
+
+// Generate a Tarantino-style script using all the reference material
+const {
+  data: { payload: scriptGeneration },
+} = await unbody.generate.text(
+            `Study these examples from Tarantino's films and create a new scene in his style:
+
+            From the scripts and articles:
+            ${JSON.stringify(textDocs)}
+
+            From his movies:
+            ${JSON.stringify(videos)}
+
+            Character dialogues:
+            ${JSON.stringify(subtitles)}
+
+            Images from his films:
+            ${JSON.stringify(images)}
+
+            Using these references, write a short 2-character scene (2-3 pages) that captures Tarantino's signature elements:
+            1. A seemingly mundane conversation that builds tension
+            2. Pop culture references
+            3. Sharp dialogue switches between casual and intense
+            4. Detailed scene description in his style
+            5. A surprise twist ending`,
+            {
+                model: "gpt-4-turbo",
+                temperature: 0.8,
+                maxTokens: 1000,
+            }
+        );
+```
+
+<Collapse title="Response">
+```typescript
+
+{
+    "content": "**INT. DUSKY, LOW-LIT DINER - NIGHT**\n\nThe camera pans across a diner filled with the aroma of coffee and the low murmur of a late-night crowd. A jukebox in the corner belts out a classic 70s rock tune.\n\nAt a booth, VINCE, a rugged, sharp-dressed man in his 40s, sits across from ELLA, a seemingly innocent-looking woman with a retro style, her eyes hiding more than they reveal. They both sip coffee, a chess board between them.\n\n**VINCE**  \n(*chuckling*)  \nYou really think Zeppelin’s \"Kashmir\" beats Floyd’s \"Echoes\"? C’mon, Ella, it’s like comparing a fine scotch to a damn good bourbon.\n\n**ELLA**  \n(*smirking, moving her bishop*)  \nIt’s all about the journey, Vince. Page and Plant take you on an expedition. “Echoes” just... floats you in space.\n\nVince reaches over, moving his knight. The clink of the chess pieces punctuates their words.\n\n**VINCE**  \nSpace? That’s exactly it. It's ethereal. You need to elevate your taste.\n\nElla gives a small, mysterious smile and pushes her pawn forward.\n\n**ELLA**  \nSpeaking of tastes, how'd you find yourself in this mess? We’re not exactly playing chess for fun, are we, Vince?\n\nThe clink grows sharper, the tension subtly building.\n\n**VINCE**  \n(*leaning in*)  \nWe all got debts, darling. You, out of all people, should know. Heard you’ve been running with the Valentino crew since Joey took a dive.\n\n**ELLA**  \n(*leaning back, unfazed*)  \nJoey had a loose tongue. And running’s a stretch. I prefer... gliding through the chaos.\n\nShe captures Vince’s knight, her fingers delicately precise. Vince's eyes narrow slightly, but he chuckles.\n\n**VINCE**  \nGlide, run, or dance, we all end up in the same hole, Ella. What’s your end game here?\n\n**ELLA**  \nTo not end up like Joey.\n\nThere’s a beat of silence as they both take a sip of coffee, the music from the jukebox switching to something moodier.\n\n**VINCE**  \nYou ever think about that last scene in *Thelma & Louise*? Sometimes going off the cliff is the only way to keep flying.\n\n**ELLA**  \n(*softly*)  \nOr you ensure you’re not the one driving.\n\nAbruptly, Ella stands, her movement fluid. Vince watches, puzzled. She slides out a small envelope and tosses it on the table.\n\n**ELLA**  \nCheckmate.\n\nVince opens the envelope, finding a lone chess piece — a queen.\n\n**VINCE**  \nWhat’s this?\n\n**ELLA**  \nYour ticket out—or your plunge off the cliff. You disappear tonight. New identity, new life.\n\nVince looks up, but Ella is already heading towards the door, her figure a shadow against the diner’s retro lights.\n\n**VINCE**  \nAnd what about you, Ella?\n\nShe stops at the door, half-turning, a cryptic smile playing on her lips.\n\n**ELLA**  \nI’m not the one driving, remember?\n\nShe exits. Vince sits there, the queen piece in hand, a mix of confusion and realization dawning on him as the screen fades to black.\n\n**CUT TO BLACK.**",
+    "metadata": {
+        "finishReason": "stop",
+        "usage": {
+            "inputTokens": 5001,
+            "outputTokens": 727,
+            "totalTokens": 5728
+        }
+    }
+}
+```
+</Collapse>
+
+
+
 Learn more in our [Generative API Guide](/generative-api/overview).
+
+
+
