--- a/pages/working-with-images.mdx
+++ b/pages/working-with-images.mdx
@@ -8,7 +8,7 @@ import { Tabs } from "nextra/components"
 Use Unbody's Image API powered by [Imgix](https://www.imgix.com/) to efficiently fetch, transform and analyze images. Capabilities include dynamic resizing, format conversion, advanced cropping, and intelligent image analysis.
 
 ## Basic Image Query
-The code fetches image information including OCR text extraction and AI-generated captions, limiting results to 5 entries.
+When working with image collections, you often need to retrieve basic information about images efficiently. This example demonstrates how to fetch image details like original file names, extracted OCR text, and AI-generated captions, allowing you to quickly inspect and understand the contents of your image database by limiting the results to 5 entries.
 
 <Tabs items={['Unbody SDK', 'GraphQL']}>
   <Tabs.Tab>
@@ -70,7 +70,7 @@ The code fetches image information including OCR text extraction and AI-generate
 </Collapse>
 
 ## Similar Image Search
-Find similar images by providing a reference image URL. Learn more about [Visual similarity](/content-api/search/visual-similarity)
+When you want to find visually similar images based on a reference image, such as exploring a collection of electric vehicles, this method allows you to retrieve images that share visual characteristics. 
 
 <Tabs items={['Unbody SDK', 'GraphQL']}>
   <Tabs.Tab>
@@ -168,5 +168,79 @@ Find similar images by providing a reference image URL. Learn more about [Visual
 ]
 ```
 </Collapse>
+
+Here are revised explanations:
+
+## Creating a Face Gallery
+Imagine building a digital yearbook or a mood board of portraits. You want to quickly gather and showcase a collection of human faces from your image library. This example demonstrates how to extract and display faces dynamically, turning a scattered image collection into a compelling visual narrative.
+
+```typescript
+// Fetch images with semantic search
+const { data: { payload: images } } = await unbody.get.imageBlock
+  .search.about("Human Face")
+  .select("url")
+  .exec();
+  
+// Render face gallery
+<div className="grid grid-cols-3 gap-4">
+	{images.map((image, index) => (
+		  <div key={index}>
+		    <img
+		      src={`${image.url}?fit=facearea&facepad=2.0&w=300&h=300`}
+		      alt="Face"
+		      className="w-full h-full"
+		      loading="lazy"
+		    />
+		  </div>
+	))}
+</div>
+```
+
+## Face Detection and Cropping with Imgix
+
+Intelligent face detection allows you to automatically center and crop images to highlight the most important part of a portrait.
+
+```typescript
+import Imgix from "react-imgix";
+
+// Face detection and cropping
+const FaceCroppedImage = () => (
+	  <Imgix
+	    src="https://images.cdn.unbody.io/your-image-path.jpg"
+	    width={300}
+	    height={300}
+	    imgixParams={{
+	      fit: "facearea",
+	      facepad: 2.0
+	    }}
+	  />
+);
+```
+
+## Responsive Image Handling
+
+When you need to create responsive images that look great on devices from mobile phones to large desktop monitors, this approach ensures your images adapt seamlessly to different screen sizes and resolutions.
+
+```typescript
+const ResponsiveImage = () => {
+  const src = "https://images.cdn.unbody.io/a2f450e8-2638-4201-8dab-f2cca67df9ce/image/a4f0d82b-6a6f-5224-a9e7-d7621e4f134a.webp";
+  
+  return (
+    <img
+      src={`${src}?w=800&h=400&fit=crop&crop=focalpoint`}
+      sizes="(max-width: 768px) 100vw, 
+             (max-width: 1200px) 50vw,
+             800px"
+      srcSet={`
+        ${src}?w=400&h=200&fit=crop&crop=focalpoint 400w,
+        ${src}?w=800&h=400&fit=crop&crop=focalpoint 800w,
+        ${src}?w=1200&h=600&fit=crop&crop=focalpoint 1200w
+      `}
+      alt="Movie scene"
+      className="w-full h-auto"
+    />
+  );
+};
+```
 
 Learn more about advanced image features in our [Image Api Guide](/image-api/overview).
