fix: nested menu items

--- a/pages/search/semantic-search.mdx
+++ b/pages/search/semantic-search.mdx
@@ -6,7 +6,7 @@ import { Tabs } from "nextra/components"
 Search based on meaning rather than exact keyword matches, allowing users to find relevant content even when exact terms don't match.
 
 ## Basic Search
-Let's say you want to find documents discussing "AI applications" - but the relevant content might use terms like "machine learning systems" or "neural networks" instead. Semantic search understands these conceptual relationships and returns relevant results regardless of exact term matches.
+Let's say you want to find documents discussing "AI applications" - but the relevant content might use terms like "machine learning systems" or "neural networks" instead. Semantic search []() understands these conceptual relationships and returns relevant results regardless of exact term matches.
 
 <Tabs items={['Unbody SDK', 'GraphQL']}>
   <Tabs.Tab>
